# glabels-batch-service

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README_tw.md  codecov.yml  compose.prod.yml  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  schema.py
app/api/: print_jobs.py
app/core/: limiter.py  logger.py  version.py
app/parsers/: __init__.py  base_parser.py  csv_parser.py
app/services/: job_manager.py  label_print.py  template_service.py
app/utils/: cpu_detect.py  glabels_engine.py
templates/: README.md
tests/: README.md  conftest.py  test_api_endpoints.py  test_cpu_detect.py  test_glabels_engine.py  test_integration.py  test_job_manager.py  test_label_print.py  test_template_service.py
